--- a/sitebricks-persist-sql/pom.xml
+++ b/sitebricks-persist-sql/pom.xml
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>com.jolbox</groupId>
       <artifactId>bonecp</artifactId>
-      <version>0.8.0-alpha1</version>
+      <version>0.7.1.RELEASE</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.guava</groupId>
