--- a/sitebricks-cloud/pom.xml
+++ b/sitebricks-cloud/pom.xml
@@ -33,10 +33,6 @@
     </dependency>
     <dependency>
       <groupId>com.google.sitebricks</groupId>
-      <artifactId>sitebricks</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.google.sitebricks</groupId>
       <artifactId>sitebricks-options</artifactId>
     </dependency>
     <dependency>
@@ -48,6 +44,11 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>r09</version>
+    </dependency>
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
     </dependency>
 
   </dependencies>
